# builder-space

./: .envrc.example  .gitignore  ARCHITECTURE.md  AWS_ACCESS.sh  CHECKLIST.md  COST_OPTIMIZATION.md  FUNCTION_BASED_APPROACH.md  GITHUB_ACTIONS.md  LICENSE  MIGRATION.md  Pulumi.auth0.yaml  Pulumi.dev.yaml  Pulumi.eks.yaml  Pulumi.yaml  QUICKREF.md  QUICKSTART.md  README.md  REMOVED.md  SUMMARY.md  __main__.py  addons.tf  backend.tf.old  cleanup.sh  cluster.py  config.py  cost-optimization.tf  eks.tf  iam.tf  main.tf  migration_helper.py  outputs.tf  pyproject.toml  requirements.txt  setup-efs.sh  terraform.tfvars.example  test.sh  troubleshoot.sh  variables.tf  versions.tf  vpc.tf
argocd-transfer/: IAM-ROLES.md  QUICK-REFERENCE.md  README.md  TRANSFER-GUIDE.md
aurora/: Pulumi.aurora.yaml  Pulumi.yaml  __init__.py  __main__.py  database.py
bootstrap/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt  variables.tf
examples/: function_based_approach.py
infra-auth0/: Pulumi.auth0.yaml  Pulumi.yaml  __main__.py  kms-secrets.py  multi-domain-auth0.py
infra-ecr/: ECR-SOLUTION-SUMMARY.md  Pulumi.ecr.yaml  Pulumi.yaml  QUICKSTART.md  README.md  __main__.py  convert-image-url.sh  setup-ecr.sh  update-helm-values.sh
infra-efs/: Pulumi.efs.yaml  Pulumi.yaml  __main__.py
infra-email/: Pulumi.email.yaml  Pulumi.yaml  README.md  __main__.py  import-resources.sh  setup-email.sh
infra-k8s/: Pulumi.k8s.yaml  Pulumi.yaml  README.md  __main__.py  install-ebs-csi-driver.sh  (+1 more)
infra-k8s-dns/: Pulumi.k8s-dns.yaml  Pulumi.yaml  __main__.py  requirements.txt
(+61 files in other folders)
